# external_order

./: .gitignore  API_SPECIFICATIONS.md  ARCHITECTURE_DIAGRAMS.md  CODEBASE_STRUCTURE.md  README.md  env.example  external_order.ps1  migration.txt  pyproject.toml
src/: config.py  main.py  order-json-converter.py  settings.py
src/app/: completed_sale_use_case.py  completed_use_case.py  error_handler.py  errors.py  log_setup.py  new_sale_use_case.py  odoo_auth.py  pre_production_use_case.py  registry.py  sale_use_case.py  stock_transfer_use_case.py
src/domain/: __init__.py  artwork.py  line_item.py  order.py  ports.py  ship_to.py  validators.py
src/domain/interfaces/: iartwork_service.py  iorder_service.py  iregistry.py  isales_service.py
src/files/: pre_production_data.json
src/interfaces/: __init__.py  base.py  iartwork_service.py  ierror_queue.py  iorder_service.py  iregistry.py  isale_service.py  istock_service.py  iuse_case.py
src/services/: camelbak_order_service.py  harman_order_service.py  harman_stock_service.py  odoo_sale_service.py  odoo_sales_service.py  pre_production_service.py  render_service.py  spectrum_artwork_service.py  spectrum_order_service.py  workflow_service.py
src/templates/: desadvd96a.j2  desadvd99a.j2  error_alert.html  stock_email.html  stock_email.j2
tests/integration/: conftest.py  test_completed_sale_integration.py  test_edge_cases.py  test_main.py  test_new_sale_integration.py  test_services_integration.py  test_stock_transfer_integration.py
tests/unit/: test_config.py  test_pre_production_service.py
(+22 files in other folders)
