[project]
name = "deonet-external-order"
version = "0.1.0"
description = "Deonet external order sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pydifact>=0.1.8",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.1",
    "redmail>=0.6.0",
    "requests>=2.32.5",
    "xmltodict>=1.0.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "types-requests>=2.32.4.20260107",
]

[tool.pytest.ini_options]
pythonpath = ["."]
